Klaar voor vandaag

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".NewMeeting"
+            android:label="@string/title_activity_new_meeting"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".MeetingActivity"
             android:label="@string/title_activity_meeting"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".HomeScreen"
             android:label="@string/title_activity_home_screen"
